Added crud warehouse operations and get operation for categories.