@@ -1,8 +1,9 @@
 package com.ing.service;
 
-import com.ing.api.ProductListResponse;
-import com.ing.api.ProductRequestJson;
-import com.ing.api.ProductResponseJson;
+import com.ing.api.product.PriceUpdateRequestJson;
+import com.ing.api.product.ProductListResponseJson;
+import com.ing.api.product.ProductRequestJson;
+import com.ing.api.product.ProductResponseJson;
 import com.ing.domain.Product;
 import com.ing.domain.ProductCategory;
 import com.ing.error.ErrorCode;
@@ -15,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.text.MessageFormat;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
@@ -25,9 +25,11 @@ public class ProductService {
     @Autowired
     private ProductCategoryRepository productCategoryRepository;
 
+    public static final String PRODUCT_ENTITY = "Product";
+
     private static final Logger logger = LoggerFactory.getLogger(ProductService.class);
 
-    public ProductListResponse getAllProducts() {
+    public ProductListResponseJson getAllProducts() {
         List<Product> allProducts = productRepository.findAll();
 
         return getProductListResponse(allProducts);
@@ -60,11 +62,21 @@ public class ProductService {
         productRepository.delete(product);
     }
 
+    public ProductResponseJson updateProductPrice(Long productId, PriceUpdateRequestJson priceUpdateRequest) {
+        Product product = retrieveProduct(productId);
+        product.setPrice(priceUpdateRequest.getPrice());
+
+        productRepository.save(product);
+
+        // Convert to response JSON (assuming you have a method for this)
+        return toJsonResponse(product);
+    }
+
     private Product retrieveProduct(Long productId) {
         return productRepository.findById(productId).orElseThrow(
                 () -> {
                     logger.warn("Tried to retrieve invalid product with id: {}", productId);
-                    return new RuntimeException(MessageFormat.format(ErrorCode.PRODUCT_NOT_FOUND.getMessage(), productId));
+                    return new RuntimeException(MessageFormat.format(ErrorCode.ENTITY_NOT_FOUND.getMessage(), PRODUCT_ENTITY, productId));
                 });
     }
 
@@ -85,11 +97,11 @@ public class ProductService {
                 .setCategory(product.getCategory().getName());
     }
 
-    private ProductListResponse getProductListResponse(List<Product> allProducts) {
-        return new ProductListResponse()
+    private ProductListResponseJson getProductListResponse(List<Product> allProducts) {
+        return new ProductListResponseJson()
                 .setProducts(allProducts.stream()
                         .map(this::toJsonResponse)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     private Product toEntity(ProductRequestJson product) {
